// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`A2uiRenderer snapshot coverage > renders deterministic markup after patch updates 1`] = `
<section
  aria-label="web-console-preview"
  class="a2ui-renderer"
  data-surface="web-console-preview"
>
  <article
    class="a2ui-component"
    data-component-id="status-line"
    data-component-type="text"
    style="animation-delay: 0ms;"
  >
    <p
      class="a2ui-text a2ui-text-success"
    >
      Renderer online. Snapshot patch applied.
    </p>
  </article>
  <article
    class="a2ui-component"
    data-component-id="summary"
    data-component-type="markdown"
    style="animation-delay: 32ms;"
  >
    <div
      class="a2ui-markdown"
    >
      <h3
        class="a2ui-markdown-heading"
      >
        A2UI Renderer\\nThis renderer keeps 
        <strong>
          strict escaping
        </strong>
         and supports 
        <a
          href="https://palyra.dev/"
          rel="noreferrer noopener"
          target="_blank"
        >
          safe links
        </a>
        .
      </h3>
    </div>
  </article>
  <article
    class="a2ui-component"
    data-component-id="tasks"
    data-component-type="list"
    style="animation-delay: 64ms;"
  >
    <ul
      class="a2ui-list"
    >
      <li>
        No \`dangerouslySetInnerHTML\`
      </li>
      <li>
        Deterministic patch application
      </li>
      <li>
        Budget-aware update queue
      </li>
      <li>
        Snapshot list extension
      </li>
    </ul>
  </article>
  <article
    class="a2ui-component"
    data-component-id="metrics"
    data-component-type="table"
    style="animation-delay: 96ms;"
  >
    <div
      class="a2ui-table-wrap"
    >
      <table
        class="a2ui-table"
      >
        <thead>
          <tr>
            <th>
              Metric
            </th>
            <th>
              Value
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              Rendered components
            </td>
            <td>
              6
            </td>
          </tr>
          <tr>
            <td>
              Queued patches
            </td>
            <td>
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </article>
  <article
    class="a2ui-component"
    data-component-id="operator-form"
    data-component-type="form"
    style="animation-delay: 128ms;"
  >
    <form
      class="a2ui-form"
    >
      <header
        class="a2ui-form-header"
      >
        <h3>
          Operator Action
        </h3>
      </header>
      <div
        class="a2ui-form-fields"
      >
        <label
          class="a2ui-form-field"
          for="operator-form-operator-note"
        >
          <span>
            Note
          </span>
          <input
            id="operator-form-operator-note"
            placeholder="Type an audit note"
            required=""
            type="text"
            value=""
          />
        </label>
        <label
          class="a2ui-form-field"
          for="operator-form-target-priority"
        >
          <span>
            Priority
          </span>
          <select
            id="operator-form-target-priority"
          >
            <option
              value="normal"
            >
              Normal
            </option>
            <option
              value="high"
            >
              High
            </option>
          </select>
        </label>
        <label
          class="a2ui-form-field a2ui-form-field-checkbox"
          for="operator-form-dry-run"
        >
          <input
            id="operator-form-dry-run"
            type="checkbox"
          />
          <span>
            Dry run
          </span>
        </label>
      </div>
      <footer
        class="a2ui-form-footer"
      >
        <button
          type="submit"
        >
          Apply
        </button>
      </footer>
    </form>
  </article>
  <article
    class="a2ui-component"
    data-component-id="latency-chart"
    data-component-type="chart"
    style="animation-delay: 160ms;"
  >
    <figure
      class="a2ui-chart"
    >
      <figcaption>
        Patch Loop Latency (ms)
      </figcaption>
      <div
        aria-label="Patch Loop Latency (ms)"
        class="a2ui-chart-bars"
        role="img"
      >
        <div
          class="a2ui-chart-row"
        >
          <span
            class="a2ui-chart-label"
          >
            P50
          </span>
          <span
            class="a2ui-chart-track"
          >
            <span
              class="a2ui-chart-bar"
              style="width: 39.130434782608695%;"
            />
          </span>
          <span
            class="a2ui-chart-value"
          >
            9
          </span>
        </div>
        <div
          class="a2ui-chart-row"
        >
          <span
            class="a2ui-chart-label"
          >
            P95
          </span>
          <span
            class="a2ui-chart-track"
          >
            <span
              class="a2ui-chart-bar"
              style="width: 60.86956521739131%;"
            />
          </span>
          <span
            class="a2ui-chart-value"
          >
            14
          </span>
        </div>
        <div
          class="a2ui-chart-row"
        >
          <span
            class="a2ui-chart-label"
          >
            P99
          </span>
          <span
            class="a2ui-chart-track"
          >
            <span
              class="a2ui-chart-bar"
              style="width: 100%;"
            />
          </span>
          <span
            class="a2ui-chart-value"
          >
            23
          </span>
        </div>
      </div>
    </figure>
  </article>
</section>
`;

exports[`A2uiRenderer snapshot coverage > renders deterministic markup for baseline document 1`] = `
<section
  aria-label="web-console-preview"
  class="a2ui-renderer"
  data-surface="web-console-preview"
>
  <article
    class="a2ui-component"
    data-component-id="status-line"
    data-component-type="text"
    style="animation-delay: 0ms;"
  >
    <p
      class="a2ui-text a2ui-text-success"
    >
      Renderer online. Waiting for incremental patches.
    </p>
  </article>
  <article
    class="a2ui-component"
    data-component-id="summary"
    data-component-type="markdown"
    style="animation-delay: 32ms;"
  >
    <div
      class="a2ui-markdown"
    >
      <h3
        class="a2ui-markdown-heading"
      >
        A2UI Renderer\\nThis renderer keeps 
        <strong>
          strict escaping
        </strong>
         and supports 
        <a
          href="https://palyra.dev/"
          rel="noreferrer noopener"
          target="_blank"
        >
          safe links
        </a>
        .
      </h3>
    </div>
  </article>
  <article
    class="a2ui-component"
    data-component-id="tasks"
    data-component-type="list"
    style="animation-delay: 64ms;"
  >
    <ul
      class="a2ui-list"
    >
      <li>
        No \`dangerouslySetInnerHTML\`
      </li>
      <li>
        Deterministic patch application
      </li>
      <li>
        Budget-aware update queue
      </li>
    </ul>
  </article>
  <article
    class="a2ui-component"
    data-component-id="metrics"
    data-component-type="table"
    style="animation-delay: 96ms;"
  >
    <div
      class="a2ui-table-wrap"
    >
      <table
        class="a2ui-table"
      >
        <thead>
          <tr>
            <th>
              Metric
            </th>
            <th>
              Value
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              Rendered components
            </td>
            <td>
              6
            </td>
          </tr>
          <tr>
            <td>
              Queued patches
            </td>
            <td>
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </article>
  <article
    class="a2ui-component"
    data-component-id="operator-form"
    data-component-type="form"
    style="animation-delay: 128ms;"
  >
    <form
      class="a2ui-form"
    >
      <header
        class="a2ui-form-header"
      >
        <h3>
          Operator Action
        </h3>
      </header>
      <div
        class="a2ui-form-fields"
      >
        <label
          class="a2ui-form-field"
          for="operator-form-operator-note"
        >
          <span>
            Note
          </span>
          <input
            id="operator-form-operator-note"
            placeholder="Type an audit note"
            required=""
            type="text"
            value=""
          />
        </label>
        <label
          class="a2ui-form-field"
          for="operator-form-target-priority"
        >
          <span>
            Priority
          </span>
          <select
            id="operator-form-target-priority"
          >
            <option
              value="normal"
            >
              Normal
            </option>
            <option
              value="high"
            >
              High
            </option>
          </select>
        </label>
        <label
          class="a2ui-form-field a2ui-form-field-checkbox"
          for="operator-form-dry-run"
        >
          <input
            checked=""
            id="operator-form-dry-run"
            type="checkbox"
          />
          <span>
            Dry run
          </span>
        </label>
      </div>
      <footer
        class="a2ui-form-footer"
      >
        <button
          type="submit"
        >
          Apply
        </button>
      </footer>
    </form>
  </article>
  <article
    class="a2ui-component"
    data-component-id="latency-chart"
    data-component-type="chart"
    style="animation-delay: 160ms;"
  >
    <figure
      class="a2ui-chart"
    >
      <figcaption>
        Patch Loop Latency (ms)
      </figcaption>
      <div
        aria-label="Patch Loop Latency (ms)"
        class="a2ui-chart-bars"
        role="img"
      >
        <div
          class="a2ui-chart-row"
        >
          <span
            class="a2ui-chart-label"
          >
            P50
          </span>
          <span
            class="a2ui-chart-track"
          >
            <span
              class="a2ui-chart-bar"
              style="width: 39.130434782608695%;"
            />
          </span>
          <span
            class="a2ui-chart-value"
          >
            9
          </span>
        </div>
        <div
          class="a2ui-chart-row"
        >
          <span
            class="a2ui-chart-label"
          >
            P95
          </span>
          <span
            class="a2ui-chart-track"
          >
            <span
              class="a2ui-chart-bar"
              style="width: 69.56521739130434%;"
            />
          </span>
          <span
            class="a2ui-chart-value"
          >
            16
          </span>
        </div>
        <div
          class="a2ui-chart-row"
        >
          <span
            class="a2ui-chart-label"
          >
            P99
          </span>
          <span
            class="a2ui-chart-track"
          >
            <span
              class="a2ui-chart-bar"
              style="width: 100%;"
            />
          </span>
          <span
            class="a2ui-chart-value"
          >
            23
          </span>
        </div>
      </div>
    </figure>
  </article>
</section>
`;
